fix layout shifting issue (Scrollbar) when popover open, made depart and travellers input none-selectable

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
   max-width: 1260px;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 :root {
   --primary-color: #50add8;
   --dark-purple-color: #000057;
